generated/checkers/gen/AllGen-Integer-Overflow-7a4b21250bf79eef26543d35bd390448646c536b/build_logs/syntax-repair-07/build_stderr_1.log
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In member function ‘void {anonymous}::SAGenTestChecker::checkBranchCondition(const clang::Stmt*, clang::ento::CheckerContext&) const’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:286:61: error: cannot convert ‘clang::ento::ProgramStatePartialTrait<llvm::ImmutableMap<const clang::VarDecl*, const clang::Expr*> >::lookup_type’ {aka ‘const clang::Expr* const*’} to ‘const clang::Expr*’ in initialization
  286 |           if (const Expr *Arg = State->get<RoundupResultMap>(VD)) {
      |                                 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~
      |                                                             |
      |                                                             clang::ento::ProgramStatePartialTrait<llvm::ImmutableMap<const clang::VarDecl*, const clang::Expr*> >::lookup_type {aka const clang::Expr* const*}
make[3]: *** [tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/build.make:76: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/SAGenTestChecker.cpp.o] Error 1
make[2]: *** [CMakeFiles/Makefile2:31101: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/all] Error 2
make[1]: *** [CMakeFiles/Makefile2:31108: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/rule] Error 2
make: *** [Makefile:7495: SAGenTestPlugin] Error 2
